--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>My Basic Portfolio</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>My Basic Portfolio</title>
-</head>
+    <body>
+        <div class ="header">
+            <div class="heading">
+                <h1>Kenny Mayer</h1>
+            </div>
+                <div class="nav">
+                    <li><a href="index.html">About</a></li> 
+                    <li><a href="portfolio.html">Portfolio</a></li> 
+                    <li><a href="contact.html">Contact</a></li>
+                </div>  
+        </div>
 
-<body>
-    <header>
-        <h1>Kenny Mayer</h1>
-        <ul>
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
-        </ul>
-    </header>
+        <div class="content">
+            <h1>About Me</h1>
+                <div class="bio">
+                <img id="bio-pic" src="assets/images/ProfilePicture.jpg" alt="My Profile Image">
+                <div class="p1">
+                    <p>
+                        Born and raised in Reston, Virginia. Attended college in Blacksburg, VA at Virginia Tech where I majored in Financial Planning. Currently living in Washington, DC. I have been in DC for three years and have fallen in love with the city. 
+                        I am excited to be a part of the GW coding bootcamp with the goal of pursing a career in web development.
+                    </p>
+                </div>
+                <div class="p2">
+                    <p>
+                        I enjoy playing sports, being outdoors, playing video games, and spending time with friends and family. My favorite thing to do is travel and be by the ocean. My favorite outdoor activity is stand-up paddleboarding. 
+                    </p>
+                </div>
+            </div>
+        </div>
 
-    <div class="container">
-        <h1>About Me</h1>
-        <img src="assets/images/ProfilePicture.jpg" alt="My Profile Image">
+    </body>
+
+    <div class="footer">
         <p>
-            Born and raised in Reston, Virginia. Attended college in Blacksburg, VA at Virginia Tech. Currently living in Washington, DC. I have been in DC for three years and have fallen in love with the city.
+            Copyright©
         </p>
-        <p>
-            I enjoy playing sports, being outdoors, playing video games, and spending time with friends and family. My favorite thing to do is travel and be by the ocean. My favorite outdoor activity is stand-up paddleboarding.
-        </p>
-    </div>
-</body>
-
-<footer>
-    <p id="Copyright">Copyright</p>
-</footer>
+    </div> 
 
 </html>
